--- a/xiu/utils/new_file.html
+++ b/xiu/utils/new_file.html
@@ -1,47 +1,6 @@
-<!doctype html>
-<html>
-<head>
-<meta charset="utf-8" />
-<meta name="viewport" content="width=device-width,initial-scale=1,maximum-scale=1,minimum-scale=1,user-scalable=no">
-<title>走秀</title>
-<link href="css/public.css" rel="stylesheet" type="text/css">
-<link href="css/style.css" rel="stylesheet" type="text/css">
-<link rel="stylesheet" type="text/css" href="utils/swiper/css/swiper-3.4.1.min.css"/>
-<script src="utils/swiper/js/swiper-3.4.1.min.js" type="text/javascript" charset="utf-8"></script>
-</head>
-<body>
-	
-<header>
-	<div class="content">
-		<div class="hd-l">
-			<a href="login/register.html">注册</a><span>|</span>
-			<a href="login/login.html">登录</a><span>|</span>
-			<img src="img/car.png" />
-		</div>
-		<img  src="img/logo.png" class="logo"/>
-		<div class="search">
-			<input type="text" placeholder="搜索商品"/>
-			<img src="img/search.png" />
-		</div>
-	</div>
-</header>
-<nav>
-	<div class="content">
-		<ul>
-			<li class="active"><a>首页</a></li>
-			<li><a>新品</a></li>
-			<li><a>女士</a></li>
-			<li><a>男士</a></li>
-			<li><a>品牌</a></li>
-			<li><a>走秀移动版</a></li>
-		</ul>
-	</div>
-</nav>
-<section id="menu">
-	<div class="content">
-		<ul class="menu1">
+<ul class="menu1">
 			<li class="li01">
-				<p>女装</p>
+				<span>女装</span>
 				<div class="menu2">
 					<h3>单鞋</h3>
 					<ul>
@@ -70,7 +29,7 @@
 				</div>
 			</li>
 			<li class="li01">
-				<p>男装</p>
+				<span>男装</span>
 				<div class="menu2">
 					<h3>单鞋</h3>
 					<ul>
@@ -99,7 +58,7 @@
 				</div>				
 			</li>
 			<li class="li01">
-				<p>女包</p>
+				<span>女包</span>
 				<div class="menu2">
 					<h3>单鞋</h3>
 					<ul>
@@ -128,7 +87,7 @@
 				</div>			
 			</li>
 			<li class="li01">
-				<p>男包</p>
+				<span>男包</span>
 				<div class="menu2">
 					<h3>单鞋</h3>
 					<ul>
@@ -157,7 +116,7 @@
 				</div>			
 			</li>
 			<li class="li01">
-				<p>女鞋</p>
+				<span>女鞋</span>
 				<div class="menu2">
 					<h3>单鞋</h3>
 					<ul>
@@ -186,7 +145,7 @@
 				</div>			
 			</li>
 			<li class="li01">
-				<p>男鞋</p>
+				<span>男鞋</span>
 				<div class="menu2">
 					<h3>单鞋</h3>
 					<ul>
@@ -215,7 +174,7 @@
 				</div>			
 			</li>
 			<li class="li01">
-				<p>妆品</p>
+				<span>妆品</span>
 				<div class="menu2">
 					<h3>单鞋</h3>
 					<ul>
@@ -244,7 +203,7 @@
 				</div>			
 			</li>
 			<li class="li01">
-				<p>配饰</p>
+				<span>配饰</span>
 				<div class="menu2">
 					<h3>单鞋</h3>
 					<ul>
@@ -273,7 +232,7 @@
 				</div>			
 			</li>
 			<li class="li01">
-				<p>配饰</p>
+				<span>配饰</span>
 				<div class="menu2">
 					<h3>单鞋</h3>
 					<ul>
@@ -302,7 +261,7 @@
 				</div>			
 			</li>
 			<li class="li01">
-				<p>腕表</p>
+				<span>腕表</span>
 				<div class="menu2">
 					<h3>单鞋</h3>
 					<ul>
@@ -331,7 +290,7 @@
 				</div>			
 			</li>
 			<li class="li01">
-				<p>生活</p>
+				<span>生活</span>
 				<div class="menu2">
 					<h3>单鞋</h3>
 					<ul>
@@ -360,7 +319,7 @@
 				</div>			
 			</li>
 			<li class="li01">
-				<p>婴童</p>
+				<span>婴童</span>
 				<div class="menu2">
 					<h3>单鞋</h3>
 					<ul>
@@ -389,175 +348,3 @@
 				</div>			
 			</li>
 		</ul>
-	</div>
-</section>
-
-<section id="banner">
-	<div class="content">
-		<div class="swiper-container">
-		    <div class="swiper-wrapper">
-		        <div class="swiper-slide"><img src="img/banner4.jpg" /></div>
-		        <div class="swiper-slide"><img src="img/banner3.jpg" /></div>
-		        <div class="swiper-slide"><img src="img/banner2.jpg" /></div>
-		        <div class="swiper-slide"><img src="img/banner1.jpg" /></div>
-		        <div class="swiper-slide"><img src="img/banner5.jpg" /></div>
-		        <div class="swiper-slide"><img src="img/banner4.jpg" /></div>
-		        <div class="swiper-slide"><img src="img/banner3.jpg" /></div>
-		    </div>
-		    <!-- 如果需要分页器 -->
-		    <div class="swiper-pagination"></div>
-		    
-		    <!-- 如果需要导航按钮 -->
-		    <div class="swiper-button-prev"></div>
-		    <div class="swiper-button-next"></div>
-		    
-		    <!-- 如果需要滚动条 -->
-		    <div class="swiper-scrollbar"></div>
-		</div>
-	</div>
-</section>
-
-<section class="title">
-	<div class="content">
-		<p>尖货推荐</p>
-	</div>
-</section>
-
-<section id="goods">
-	<div class="content">
-		<ul>
-			<li>
-				<img src="img/goods1.png" />
-			</li>
-			<li>
-				<img src="img/goods2.png" />
-			</li>
-			<li>
-				<img src="img/goods1.png" />
-			</li>
-			<li>
-				<img src="img/goods2.png" />
-			</li>
-			<li>
-				<img src="img/goods1.png" />
-			</li>
-			<li>
-				<img src="img/goods2.png" />
-			</li>
-		</ul>
-	</div>
-</section>
-<section class="title">
-	<div class="content">
-		<p>发现好货</p>
-	</div>
-</section>
-<section id="find">
-	<div class="content">
-		<ul>
-			<li>
-				<div class="box">
-					<img  src="img/g1.png"/>
-					<p>Burberry</p>
-					<h3>男士kindom花式衬衫</h3>
-					<span>￥2100.0</span>
-				</div>	
-			</li>
-			<li>
-				<div class="box">
-					<img  src="img/g1.png"/>
-					<p>Burberry</p>
-					<h3>男士kindom花式衬衫</h3>
-					<span>￥2100.0</span>
-				</div>	
-			</li>
-			<li>
-				<div class="box">
-					<img  src="img/g1.png"/>
-					<p>Burberry</p>
-					<h3>男士kindom花式衬衫</h3>
-					<span>￥2100.0</span>
-				</div>	
-			</li>
-			<li>
-				<div class="box">
-					<img  src="img/g1.png"/>
-					<p>Burberry</p>
-					<h3>男士kindom花式衬衫</h3>
-					<span>￥2100.0</span>
-				</div>	
-			</li>
-			<li>
-				<div class="box">
-					<img  src="img/g1.png"/>
-					<p>Burberry</p>
-					<h3>男士kindom花式衬衫</h3>
-					<span>￥2100.0</span>
-				</div>	
-			</li>
-			<li>
-				<div class="box">
-					<img  src="img/g1.png"/>
-					<p>Burberry</p>
-					<h3>男士kindom花式衬衫</h3>
-					<span>￥2100.0</span>
-				</div>	
-			</li>
-			<li>
-				<div class="box">
-					<img  src="img/g1.png"/>
-					<p>Burberry</p>
-					<h3>男士kindom花式衬衫</h3>
-					<span>￥2100.0</span>
-				</div>	
-			</li>			
-		</ul>
-	</div>
-</section>
-<section id="promise">
-	<div class="content">
-			<ul>
-				<li>
-					<i></i>
-					<span>海外直邮</span>
-				</li>
-				<li>
-					<i class="t1"></i>
-					<span>品质保证</span>
-				</li>
-				<li>
-					<i class="t2"></i>
-					<span>售后无忧</span>
-				</li>				
-			</ul>
-	</div>
-</section>
-<footer>
-	<div class="content">
-		<div class="left">
-			<img src="img/foot-l.png" class="l1"/>
-			<img src="img/foot-2.png"/ class="l2">
-		</div>
-		<ul class="left2">
-			<li>常见问题</li>
-			<li>售后服务</li>
-			<li>常见问题</li>
-			<li>物流配送</li>
-			<li>售后服务</li>
-		</ul>
-		<div class="center">
-			<p>移动走秀</p>
-			<img src="img/foot3.png"/>
-		</div>
-		<div class="right">
-			<p>移动走秀</p>
-			<img src="img/foot4.png" class="img1"/>
-			<img src="img/foot5.png"/>
-		</div>
-	</div>
-</footer>
-</body>
-<script src="utils/jquery.2.2.4.js"></script>
-<script src="utils/banner.js"></script>
-<script src="js/index.js"></script>
-</html>
