--- a/xiu/cart/cart.html
+++ b/xiu/cart/cart.html
@@ -1,6 +1,49 @@
-<ul class="menu1">
+<!doctype html>
+<html>
+<head>
+<meta charset="utf-8" />
+<meta name="viewport" content="width=device-width,initial-scale=1,maximum-scale=1,minimum-scale=1,user-scalable=no">
+<title>走秀</title>
+<link href="css/public.css" rel="stylesheet" type="text/css">
+<link href="css/style.css" rel="stylesheet" type="text/css">
+</head>
+<body>
+<header>
+	<div class="content">
+		<div class="hd-l">
+			<div class="not-login">
+				<a href="login/register.html">注册</a><span>|</span>
+				<a href="login/login.html">登录</a><span>|</span>
+			</div>
+			<div class="login-success">
+				您好<span>XXX</span>，<a class="logout">退出</a>
+			</div>
+			<img src="img/car.png" />
+		</div>
+		<img  src="img/logo.png" class="logo"/>
+		<div class="search">
+			<input type="text" placeholder="搜索商品"/>
+			<img src="img/search.png" />
+		</div>
+	</div>
+</header>
+<nav>
+	<div class="content">
+		<ul>
+			<li class="active"><a>首页</a></li>
+			<li><a>新品</a></li>
+			<li><a>女士</a></li>
+			<li><a>男士</a></li>
+			<li><a>品牌</a></li>
+			<li><a>走秀移动版</a></li>
+		</ul>
+	</div>
+</nav>
+<section id="menu">
+	<div class="content">
+		<ul class="menu1">
 			<li class="li01">
-				<span>女装</span>
+				<p>女装</p>
 				<div class="menu2">
 					<h3>单鞋</h3>
 					<ul>
@@ -29,7 +72,7 @@
 				</div>
 			</li>
 			<li class="li01">
-				<span>男装</span>
+				<p>男装</p>
 				<div class="menu2">
 					<h3>单鞋</h3>
 					<ul>
@@ -58,7 +101,7 @@
 				</div>				
 			</li>
 			<li class="li01">
-				<span>女包</span>
+				<p>女包</p>
 				<div class="menu2">
 					<h3>单鞋</h3>
 					<ul>
@@ -87,7 +130,7 @@
 				</div>			
 			</li>
 			<li class="li01">
-				<span>男包</span>
+				<p>男包</p>
 				<div class="menu2">
 					<h3>单鞋</h3>
 					<ul>
@@ -116,7 +159,7 @@
 				</div>			
 			</li>
 			<li class="li01">
-				<span>女鞋</span>
+				<p>女鞋</p>
 				<div class="menu2">
 					<h3>单鞋</h3>
 					<ul>
@@ -145,7 +188,7 @@
 				</div>			
 			</li>
 			<li class="li01">
-				<span>男鞋</span>
+				<p>男鞋</p>
 				<div class="menu2">
 					<h3>单鞋</h3>
 					<ul>
@@ -174,7 +217,7 @@
 				</div>			
 			</li>
 			<li class="li01">
-				<span>妆品</span>
+				<p>妆品</p>
 				<div class="menu2">
 					<h3>单鞋</h3>
 					<ul>
@@ -203,7 +246,7 @@
 				</div>			
 			</li>
 			<li class="li01">
-				<span>配饰</span>
+				<p>配饰</p>
 				<div class="menu2">
 					<h3>单鞋</h3>
 					<ul>
@@ -232,7 +275,7 @@
 				</div>			
 			</li>
 			<li class="li01">
-				<span>配饰</span>
+				<p>配饰</p>
 				<div class="menu2">
 					<h3>单鞋</h3>
 					<ul>
@@ -261,7 +304,7 @@
 				</div>			
 			</li>
 			<li class="li01">
-				<span>腕表</span>
+				<p>腕表</p>
 				<div class="menu2">
 					<h3>单鞋</h3>
 					<ul>
@@ -290,61 +333,89 @@
 				</div>			
 			</li>
 			<li class="li01">
-				<span>生活</span>
-				<div class="menu2">
-					<h3>单鞋</h3>
-					<ul>
-						<li>平跟鞋</li>
-						<li>坡跟鞋</li>
-						<li>增高鞋</li>
-						<li>中跟鞋</li>
-						<li>低跟鞋</li>
-						<li>高跟鞋</li>
-					</ul>
-					<h3>时尚鞋款</h3>
-					<ul>
-						<li>板鞋</li>
-						<li>运动鞋</li>
-						<li>户外鞋</li>
-						<li>家居鞋</li>
-						<li>休闲皮鞋</li>
-						<li>厚底鞋</li>
-						<li>板鞋</li>
-						<li>运动鞋</li>
-						<li>户外鞋</li>
-						<li>家居鞋</li>
-						<li>休闲皮鞋</li>
-						<li>厚底鞋</li>
-					</ul>
-				</div>			
+				<p>生活</p>
 			</li>
 			<li class="li01">
-				<span>婴童</span>
-				<div class="menu2">
-					<h3>单鞋</h3>
-					<ul>
-						<li>平跟鞋</li>
-						<li>坡跟鞋</li>
-						<li>增高鞋</li>
-						<li>中跟鞋</li>
-						<li>低跟鞋</li>
-						<li>高跟鞋</li>
-					</ul>
-					<h3>时尚鞋款</h3>
-					<ul>
-						<li>板鞋</li>
-						<li>运动鞋</li>
-						<li>户外鞋</li>
-						<li>家居鞋</li>
-						<li>休闲皮鞋</li>
-						<li>厚底鞋</li>
-						<li>板鞋</li>
-						<li>运动鞋</li>
-						<li>户外鞋</li>
-						<li>家居鞋</li>
-						<li>休闲皮鞋</li>
-						<li>厚底鞋</li>
-					</ul>
-				</div>			
+				<p>婴童</p>
 			</li>
 		</ul>
+	</div>
+</section>
+
+
+<section id="main">
+	<div class="content cont">
+    <h2>购物车<small><a href="../com-list/list.html">继续购物</a></small></h2>
+    <table border="1" cellspacing="0" width="800" align="center" class="tab">
+        <thead>
+            <tr>
+                <th>选中</th>
+                <th>图片</th>
+                <th>名字</th>
+                <th>价格</th>
+                <th>数量</th>
+                <th>操作</th>
+            </tr>
+        </thead>
+        <tbody>
+            <!-- <tr>
+                <td><input type="cheackbox"></td>
+                <td><img src="" alt=""></td>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td><span>删除</span></td>
+            </tr> -->
+        </tbody>
+    </table>		
+	</div>
+</section>
+
+
+<section id="promise">
+	<div class="content">
+			<ul>
+				<li>
+					<i></i>
+					<span>海外直邮</span>
+				</li>
+				<li>
+					<i class="t1"></i>
+					<span>品质保证</span>
+				</li>
+				<li>
+					<i class="t2"></i>
+					<span>售后无忧</span>
+				</li>				
+			</ul>
+	</div>
+</section>
+<footer>
+	<div class="content">
+		<div class="left">
+			<img src="img/foot-l.png" class="l1"/>
+			<img src="img/foot-2.png"/ class="l2">
+		</div>
+		<ul class="left2">
+			<li>常见问题</li>
+			<li>售后服务</li>
+			<li>常见问题</li>
+			<li>物流配送</li>
+			<li>售后服务</li>
+		</ul>
+		<div class="center">
+			<p>移动走秀</p>
+			<img src="img/foot3.png"/>
+		</div>
+		<div class="right">
+			<p>移动走秀</p>
+			<img src="img/foot4.png" class="img1"/>
+			<img src="img/foot5.png"/>
+		</div>
+	</div>
+</footer>
+</body>
+<script src="js/ajax.2.0.js"></script>
+<script src="js/cookie.js"></script>
+<script src="js/cart.js"></script>
+</html>
