--- a/xiu/com-detail/detail.html
+++ b/xiu/com-detail/detail.html
@@ -342,6 +342,34 @@
 	</div>
 </section>
 
+<div id="main">
+	<div class="content">
+		<div class="bigbox">
+			<div class="left">
+				<div class="left-t">
+					<img src="img/b.jpg" class="msg"/>
+					<img src="img/goods1.png"/ class="msg2 msg">
+					<img src="img/goods2.png"/ class="msg3 msg">
+				</div>
+				<div class="left-b">
+						<img src="img/search.png"/>
+						<img src="img/goods1.png"/>
+						<img src="img/goods2.png"/>
+				</div>
+			</div>
+			<div class="right">
+				<p>女士蓝色之水</p>
+				<h3>价格</h3>
+				<input type="button" value="加入购物" class="btncart"/>
+				<a href="../cart/cart.html">去购物车</a>
+			</div>			
+		</div>
+	</div>
+</div>
+
+
+
+
 <section id="promise">
 	<div class="content">
 			<ul>
@@ -385,5 +413,6 @@
 	</div>
 </footer>
 </body>
+<script src="js/cookie.js"></script>
 <script src="js/detail.js"></script>
 </html>
