--- a/xiu/com-detail/detail.html
+++ b/xiu/com-detail/detail.html
@@ -30,7 +30,7 @@
 <nav>
 	<div class="content">
 		<ul>
-			<li class="active"><a>首页</a></li>
+			<li class="active"><a href="../index.html">首页</a></li>
 			<li><a>新品</a></li>
 			<li><a>女士</a></li>
 			<li><a>男士</a></li>
@@ -101,33 +101,7 @@
 				</div>				
 			</li>
 			<li class="li01">
-				<p>女包</p>
-				<div class="menu2">
-					<h3>单鞋</h3>
-					<ul>
-						<li>平跟鞋</li>
-						<li>坡跟鞋</li>
-						<li>增高鞋</li>
-						<li>中跟鞋</li>
-						<li>低跟鞋</li>
-						<li>高跟鞋</li>
-					</ul>
-					<h3>时尚鞋款</h3>
-					<ul>
-						<li>板鞋</li>
-						<li>运动鞋</li>
-						<li>户外鞋</li>
-						<li>家居鞋</li>
-						<li>休闲皮鞋</li>
-						<li>厚底鞋</li>
-						<li>板鞋</li>
-						<li>运动鞋</li>
-						<li>户外鞋</li>
-						<li>家居鞋</li>
-						<li>休闲皮鞋</li>
-						<li>厚底鞋</li>
-					</ul>
-				</div>			
+				<p>女包</p>		
 			</li>
 			<li class="li01">
 				<p>男包</p>
@@ -159,178 +133,22 @@
 				</div>			
 			</li>
 			<li class="li01">
-				<p>女鞋</p>
-				<div class="menu2">
-					<h3>单鞋</h3>
-					<ul>
-						<li>平跟鞋</li>
-						<li>坡跟鞋</li>
-						<li>增高鞋</li>
-						<li>中跟鞋</li>
-						<li>低跟鞋</li>
-						<li>高跟鞋</li>
-					</ul>
-					<h3>时尚鞋款</h3>
-					<ul>
-						<li>板鞋</li>
-						<li>运动鞋</li>
-						<li>户外鞋</li>
-						<li>家居鞋</li>
-						<li>休闲皮鞋</li>
-						<li>厚底鞋</li>
-						<li>板鞋</li>
-						<li>运动鞋</li>
-						<li>户外鞋</li>
-						<li>家居鞋</li>
-						<li>休闲皮鞋</li>
-						<li>厚底鞋</li>
-					</ul>
-				</div>			
+				<p>女鞋</p>		
 			</li>
 			<li class="li01">
-				<p>男鞋</p>
-				<div class="menu2">
-					<h3>单鞋</h3>
-					<ul>
-						<li>平跟鞋</li>
-						<li>坡跟鞋</li>
-						<li>增高鞋</li>
-						<li>中跟鞋</li>
-						<li>低跟鞋</li>
-						<li>高跟鞋</li>
-					</ul>
-					<h3>时尚鞋款</h3>
-					<ul>
-						<li>板鞋</li>
-						<li>运动鞋</li>
-						<li>户外鞋</li>
-						<li>家居鞋</li>
-						<li>休闲皮鞋</li>
-						<li>厚底鞋</li>
-						<li>板鞋</li>
-						<li>运动鞋</li>
-						<li>户外鞋</li>
-						<li>家居鞋</li>
-						<li>休闲皮鞋</li>
-						<li>厚底鞋</li>
-					</ul>
-				</div>			
+				<p>男鞋</p>		
 			</li>
 			<li class="li01">
-				<p>妆品</p>
-				<div class="menu2">
-					<h3>单鞋</h3>
-					<ul>
-						<li>平跟鞋</li>
-						<li>坡跟鞋</li>
-						<li>增高鞋</li>
-						<li>中跟鞋</li>
-						<li>低跟鞋</li>
-						<li>高跟鞋</li>
-					</ul>
-					<h3>时尚鞋款</h3>
-					<ul>
-						<li>板鞋</li>
-						<li>运动鞋</li>
-						<li>户外鞋</li>
-						<li>家居鞋</li>
-						<li>休闲皮鞋</li>
-						<li>厚底鞋</li>
-						<li>板鞋</li>
-						<li>运动鞋</li>
-						<li>户外鞋</li>
-						<li>家居鞋</li>
-						<li>休闲皮鞋</li>
-						<li>厚底鞋</li>
-					</ul>
-				</div>			
+				<p>妆品</p>		
 			</li>
 			<li class="li01">
-				<p>配饰</p>
-				<div class="menu2">
-					<h3>单鞋</h3>
-					<ul>
-						<li>平跟鞋</li>
-						<li>坡跟鞋</li>
-						<li>增高鞋</li>
-						<li>中跟鞋</li>
-						<li>低跟鞋</li>
-						<li>高跟鞋</li>
-					</ul>
-					<h3>时尚鞋款</h3>
-					<ul>
-						<li>板鞋</li>
-						<li>运动鞋</li>
-						<li>户外鞋</li>
-						<li>家居鞋</li>
-						<li>休闲皮鞋</li>
-						<li>厚底鞋</li>
-						<li>板鞋</li>
-						<li>运动鞋</li>
-						<li>户外鞋</li>
-						<li>家居鞋</li>
-						<li>休闲皮鞋</li>
-						<li>厚底鞋</li>
-					</ul>
-				</div>			
+				<p>配饰</p>			
 			</li>
 			<li class="li01">
-				<p>配饰</p>
-				<div class="menu2">
-					<h3>单鞋</h3>
-					<ul>
-						<li>平跟鞋</li>
-						<li>坡跟鞋</li>
-						<li>增高鞋</li>
-						<li>中跟鞋</li>
-						<li>低跟鞋</li>
-						<li>高跟鞋</li>
-					</ul>
-					<h3>时尚鞋款</h3>
-					<ul>
-						<li>板鞋</li>
-						<li>运动鞋</li>
-						<li>户外鞋</li>
-						<li>家居鞋</li>
-						<li>休闲皮鞋</li>
-						<li>厚底鞋</li>
-						<li>板鞋</li>
-						<li>运动鞋</li>
-						<li>户外鞋</li>
-						<li>家居鞋</li>
-						<li>休闲皮鞋</li>
-						<li>厚底鞋</li>
-					</ul>
-				</div>			
+				<p>配饰</p>		
 			</li>
 			<li class="li01">
-				<p>腕表</p>
-				<div class="menu2">
-					<h3>单鞋</h3>
-					<ul>
-						<li>平跟鞋</li>
-						<li>坡跟鞋</li>
-						<li>增高鞋</li>
-						<li>中跟鞋</li>
-						<li>低跟鞋</li>
-						<li>高跟鞋</li>
-					</ul>
-					<h3>时尚鞋款</h3>
-					<ul>
-						<li>板鞋</li>
-						<li>运动鞋</li>
-						<li>户外鞋</li>
-						<li>家居鞋</li>
-						<li>休闲皮鞋</li>
-						<li>厚底鞋</li>
-						<li>板鞋</li>
-						<li>运动鞋</li>
-						<li>户外鞋</li>
-						<li>家居鞋</li>
-						<li>休闲皮鞋</li>
-						<li>厚底鞋</li>
-					</ul>
-				</div>			
+				<p>腕表</p>			
 			</li>
 			<li class="li01">
 				<p>生活</p>
@@ -347,9 +165,9 @@
 		<div class="bigbox">
 			<div class="left">
 				<div class="left-t">
-					<img src="img/b.jpg" class="msg"/>
+<!--				<img src="img/b.jpg" class="msg"/>
 					<img src="img/goods1.png"/ class="msg2 msg">
-					<img src="img/goods2.png"/ class="msg3 msg">
+					<img src="img/goods2.png"/ class="msg3 msg">-->
 				</div>
 				<div class="left-b">
 						<img src="img/search.png"/>
@@ -359,7 +177,8 @@
 			</div>
 			<div class="right">
 				<p>女士蓝色之水</p>
-				<h3>价格</h3>
+				<h4>品牌：Polo Ralph Lauren 商品编号：1111</h4>
+				<h3>价格：￥599</h3>
 				<input type="button" value="加入购物" class="btncart"/>
 				<a href="../cart/cart.html">去购物车</a>
 			</div>			
@@ -413,6 +232,6 @@
 	</div>
 </footer>
 </body>
-<script src="js/cookie.js"></script>
+<script src="js/ajax.2.0.js"></script>
 <script src="js/detail.js"></script>
 </html>
