--- a/xiu/index.html
+++ b/xiu/index.html
@@ -21,7 +21,7 @@
 			<div class="login-success">
 				您好<span>XXX</span>，<a class="logout">退出</a>
 			</div>
-			<img src="img/car.png" />
+			<a href="cart/cart.html"><img src="img/car.png" /></a>
 		</div>
 		<img  src="img/logo.png" class="logo"/>
 		<div class="search">
@@ -34,11 +34,11 @@
 	<div class="content">
 		<ul>
 			<li class="active"><a>首页</a></li>
-			<li><a>新品</a></li>
-			<li><a>女士</a></li>
-			<li><a>男士</a></li>
-			<li><a>品牌</a></li>
-			<li><a>走秀移动版</a></li>
+			<li><a href="com-list/list.html">新品</a></li>
+			<li><a href="com-list/list.html">女士</a></li>
+			<li><a href="com-list/list.html">男士</a></li>
+			<li><a href="com-list/list.html">品牌</a></li>
+			<li><a href="com-list/list.html">走秀移动版</a></li>
 		</ul>
 	</div>
 </nav>
@@ -279,61 +279,9 @@
 			</li>
 			<li class="li01">
 				<p>配饰</p>
-				<div class="menu2">
-					<h3>单鞋</h3>
-					<ul>
-						<li>平跟鞋</li>
-						<li>坡跟鞋</li>
-						<li>增高鞋</li>
-						<li>中跟鞋</li>
-						<li>低跟鞋</li>
-						<li>高跟鞋</li>
-					</ul>
-					<h3>时尚鞋款</h3>
-					<ul>
-						<li>板鞋</li>
-						<li>运动鞋</li>
-						<li>户外鞋</li>
-						<li>家居鞋</li>
-						<li>休闲皮鞋</li>
-						<li>厚底鞋</li>
-						<li>板鞋</li>
-						<li>运动鞋</li>
-						<li>户外鞋</li>
-						<li>家居鞋</li>
-						<li>休闲皮鞋</li>
-						<li>厚底鞋</li>
-					</ul>
-				</div>			
 			</li>
 			<li class="li01">
 				<p>腕表</p>
-				<div class="menu2">
-					<h3>单鞋</h3>
-					<ul>
-						<li>平跟鞋</li>
-						<li>坡跟鞋</li>
-						<li>增高鞋</li>
-						<li>中跟鞋</li>
-						<li>低跟鞋</li>
-						<li>高跟鞋</li>
-					</ul>
-					<h3>时尚鞋款</h3>
-					<ul>
-						<li>板鞋</li>
-						<li>运动鞋</li>
-						<li>户外鞋</li>
-						<li>家居鞋</li>
-						<li>休闲皮鞋</li>
-						<li>厚底鞋</li>
-						<li>板鞋</li>
-						<li>运动鞋</li>
-						<li>户外鞋</li>
-						<li>家居鞋</li>
-						<li>休闲皮鞋</li>
-						<li>厚底鞋</li>
-					</ul>
-				</div>			
 			</li>
 			<li class="li01">
 				<p>生活</p>
