--- a/xiu/cart/cart.html
+++ b/xiu/cart/cart.html
@@ -30,7 +30,7 @@
 <nav>
 	<div class="content">
 		<ul>
-			<li class="active"><a>首页</a></li>
+			<li class="active"><a href="../index.html">首页</a></li>
 			<li><a>新品</a></li>
 			<li><a>女士</a></li>
 			<li><a>男士</a></li>
@@ -130,207 +130,25 @@
 				</div>			
 			</li>
 			<li class="li01">
-				<p>男包</p>
-				<div class="menu2">
-					<h3>单鞋</h3>
-					<ul>
-						<li>平跟鞋</li>
-						<li>坡跟鞋</li>
-						<li>增高鞋</li>
-						<li>中跟鞋</li>
-						<li>低跟鞋</li>
-						<li>高跟鞋</li>
-					</ul>
-					<h3>时尚鞋款</h3>
-					<ul>
-						<li>板鞋</li>
-						<li>运动鞋</li>
-						<li>户外鞋</li>
-						<li>家居鞋</li>
-						<li>休闲皮鞋</li>
-						<li>厚底鞋</li>
-						<li>板鞋</li>
-						<li>运动鞋</li>
-						<li>户外鞋</li>
-						<li>家居鞋</li>
-						<li>休闲皮鞋</li>
-						<li>厚底鞋</li>
-					</ul>
-				</div>			
+				<p>男包</p>		
 			</li>
 			<li class="li01">
-				<p>女鞋</p>
-				<div class="menu2">
-					<h3>单鞋</h3>
-					<ul>
-						<li>平跟鞋</li>
-						<li>坡跟鞋</li>
-						<li>增高鞋</li>
-						<li>中跟鞋</li>
-						<li>低跟鞋</li>
-						<li>高跟鞋</li>
-					</ul>
-					<h3>时尚鞋款</h3>
-					<ul>
-						<li>板鞋</li>
-						<li>运动鞋</li>
-						<li>户外鞋</li>
-						<li>家居鞋</li>
-						<li>休闲皮鞋</li>
-						<li>厚底鞋</li>
-						<li>板鞋</li>
-						<li>运动鞋</li>
-						<li>户外鞋</li>
-						<li>家居鞋</li>
-						<li>休闲皮鞋</li>
-						<li>厚底鞋</li>
-					</ul>
-				</div>			
+				<p>女鞋</p>			
 			</li>
 			<li class="li01">
-				<p>男鞋</p>
-				<div class="menu2">
-					<h3>单鞋</h3>
-					<ul>
-						<li>平跟鞋</li>
-						<li>坡跟鞋</li>
-						<li>增高鞋</li>
-						<li>中跟鞋</li>
-						<li>低跟鞋</li>
-						<li>高跟鞋</li>
-					</ul>
-					<h3>时尚鞋款</h3>
-					<ul>
-						<li>板鞋</li>
-						<li>运动鞋</li>
-						<li>户外鞋</li>
-						<li>家居鞋</li>
-						<li>休闲皮鞋</li>
-						<li>厚底鞋</li>
-						<li>板鞋</li>
-						<li>运动鞋</li>
-						<li>户外鞋</li>
-						<li>家居鞋</li>
-						<li>休闲皮鞋</li>
-						<li>厚底鞋</li>
-					</ul>
-				</div>			
+				<p>男鞋</p>		
 			</li>
 			<li class="li01">
-				<p>妆品</p>
-				<div class="menu2">
-					<h3>单鞋</h3>
-					<ul>
-						<li>平跟鞋</li>
-						<li>坡跟鞋</li>
-						<li>增高鞋</li>
-						<li>中跟鞋</li>
-						<li>低跟鞋</li>
-						<li>高跟鞋</li>
-					</ul>
-					<h3>时尚鞋款</h3>
-					<ul>
-						<li>板鞋</li>
-						<li>运动鞋</li>
-						<li>户外鞋</li>
-						<li>家居鞋</li>
-						<li>休闲皮鞋</li>
-						<li>厚底鞋</li>
-						<li>板鞋</li>
-						<li>运动鞋</li>
-						<li>户外鞋</li>
-						<li>家居鞋</li>
-						<li>休闲皮鞋</li>
-						<li>厚底鞋</li>
-					</ul>
-				</div>			
+				<p>妆品</p>		
 			</li>
 			<li class="li01">
-				<p>配饰</p>
-				<div class="menu2">
-					<h3>单鞋</h3>
-					<ul>
-						<li>平跟鞋</li>
-						<li>坡跟鞋</li>
-						<li>增高鞋</li>
-						<li>中跟鞋</li>
-						<li>低跟鞋</li>
-						<li>高跟鞋</li>
-					</ul>
-					<h3>时尚鞋款</h3>
-					<ul>
-						<li>板鞋</li>
-						<li>运动鞋</li>
-						<li>户外鞋</li>
-						<li>家居鞋</li>
-						<li>休闲皮鞋</li>
-						<li>厚底鞋</li>
-						<li>板鞋</li>
-						<li>运动鞋</li>
-						<li>户外鞋</li>
-						<li>家居鞋</li>
-						<li>休闲皮鞋</li>
-						<li>厚底鞋</li>
-					</ul>
-				</div>			
+				<p>配饰</p>		
 			</li>
 			<li class="li01">
-				<p>配饰</p>
-				<div class="menu2">
-					<h3>单鞋</h3>
-					<ul>
-						<li>平跟鞋</li>
-						<li>坡跟鞋</li>
-						<li>增高鞋</li>
-						<li>中跟鞋</li>
-						<li>低跟鞋</li>
-						<li>高跟鞋</li>
-					</ul>
-					<h3>时尚鞋款</h3>
-					<ul>
-						<li>板鞋</li>
-						<li>运动鞋</li>
-						<li>户外鞋</li>
-						<li>家居鞋</li>
-						<li>休闲皮鞋</li>
-						<li>厚底鞋</li>
-						<li>板鞋</li>
-						<li>运动鞋</li>
-						<li>户外鞋</li>
-						<li>家居鞋</li>
-						<li>休闲皮鞋</li>
-						<li>厚底鞋</li>
-					</ul>
-				</div>			
+				<p>配饰</p>			
 			</li>
 			<li class="li01">
-				<p>腕表</p>
-				<div class="menu2">
-					<h3>单鞋</h3>
-					<ul>
-						<li>平跟鞋</li>
-						<li>坡跟鞋</li>
-						<li>增高鞋</li>
-						<li>中跟鞋</li>
-						<li>低跟鞋</li>
-						<li>高跟鞋</li>
-					</ul>
-					<h3>时尚鞋款</h3>
-					<ul>
-						<li>板鞋</li>
-						<li>运动鞋</li>
-						<li>户外鞋</li>
-						<li>家居鞋</li>
-						<li>休闲皮鞋</li>
-						<li>厚底鞋</li>
-						<li>板鞋</li>
-						<li>运动鞋</li>
-						<li>户外鞋</li>
-						<li>家居鞋</li>
-						<li>休闲皮鞋</li>
-						<li>厚底鞋</li>
-					</ul>
-				</div>			
+				<p>腕表</p>		
 			</li>
 			<li class="li01">
 				<p>生活</p>
@@ -345,8 +163,8 @@
 
 <section id="main">
 	<div class="content cont">
-    <h2>购物车<small><a href="../com-list/list.html">继续购物</a></small></h2>
-    <table border="1" cellspacing="0" width="800" align="center" class="tab">
+    <a href="../com-list/list.html">继续购物</a>
+    <table cellspacing="0" width="1200" align="center" class="tab" cellpadding="5px">
         <thead>
             <tr>
                 <th>选中</th>
@@ -416,6 +234,5 @@
 </footer>
 </body>
 <script src="js/ajax.2.0.js"></script>
-<script src="js/cookie.js"></script>
 <script src="js/cart.js"></script>
 </html>
